// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MainNav should render 1`] = `
<DocumentFragment>
  <nav>
    <div
      class="block tablet:hidden"
      data-testid="MainNavMobile"
    >
      <button
        class="relative h-10 w-10 focus:outline-none"
        type="button"
      >
        <span
          class="sr-only"
        >
          Open main menu
        </span>
        <div
          class="absolute left-1/2 top-1/2 block w-5 -translate-x-1/2 -translate-y-1/2 transform"
        >
          <span
            aria-hidden="true"
            class="absolute block h-0.5 w-5 transform bg-white transition ease-in-out -translate-y-1.5"
          />
          <span
            aria-hidden="true"
            class="absolute block h-0.5 w-5 transform bg-white transition ease-in-out"
          />
          <span
            aria-hidden="true"
            class="absolute block h-0.5 w-5 transform bg-white transition ease-in-out translate-y-1.5"
          />
        </div>
      </button>
      <div
        class="absolute inset-x-0 -z-10 shadow-lg transition -translate-y-full"
      >
        <ul
          class="flex-col items-center space-y-4 pt-4 pb-8 hidden"
        >
          <li>
            <a
              class="text-lg"
              href="/docs"
            >
              Docs
            </a>
          </li>
          <li>
            <a
              class="text-lg"
              href="/enterprise"
            >
              Enterprise
            </a>
          </li>
          <li>
            <a
              class="text-lg"
              href="/sponsors"
            >
              Sponsors
            </a>
          </li>
        </ul>
      </div>
    </div>
    <ul
      class="hidden space-x-8 tablet:flex"
      data-testid="MainNavDesktop"
    >
      <li>
        <a
          class="text-lg"
          href="/docs"
        >
          Docs
        </a>
      </li>
      <li>
        <a
          class="text-lg"
          href="/enterprise"
        >
          Enterprise
        </a>
      </li>
      <li>
        <a
          class="text-lg"
          href="/sponsors"
        >
          Sponsors
        </a>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`MainNav should toggle mobile navigation 1`] = `
<DocumentFragment>
  <nav>
    <div
      class="block tablet:hidden"
      data-testid="MainNavMobile"
    >
      <button
        class="relative h-10 w-10 focus:outline-none"
        type="button"
      >
        <span
          class="sr-only"
        >
          Open main menu
        </span>
        <div
          class="absolute left-1/2 top-1/2 block w-5 -translate-x-1/2 -translate-y-1/2 transform"
        >
          <span
            aria-hidden="true"
            class="absolute block h-0.5 w-5 transform bg-white transition ease-in-out rotate-45"
          />
          <span
            aria-hidden="true"
            class="absolute block h-0.5 w-5 transform bg-white transition ease-in-out opacity-0"
          />
          <span
            aria-hidden="true"
            class="absolute block h-0.5 w-5 transform bg-white transition ease-in-out -rotate-45"
          />
        </div>
      </button>
      <div
        class="absolute inset-x-0 -z-10 shadow-lg transition translate-y-0"
      >
        <ul
          class="flex-col items-center space-y-4 pt-4 pb-8 flex"
        >
          <li>
            <a
              class="text-lg"
              href="/docs"
            >
              Docs
            </a>
          </li>
          <li>
            <a
              class="text-lg"
              href="/enterprise"
            >
              Enterprise
            </a>
          </li>
          <li>
            <a
              class="text-lg"
              href="/sponsors"
            >
              Sponsors
            </a>
          </li>
        </ul>
      </div>
    </div>
    <ul
      class="hidden space-x-8 tablet:flex"
      data-testid="MainNavDesktop"
    >
      <li>
        <a
          class="text-lg"
          href="/docs"
        >
          Docs
        </a>
      </li>
      <li>
        <a
          class="text-lg"
          href="/enterprise"
        >
          Enterprise
        </a>
      </li>
      <li>
        <a
          class="text-lg"
          href="/sponsors"
        >
          Sponsors
        </a>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`MainNav should toggle mobile navigation 2`] = `
<DocumentFragment>
  <nav>
    <div
      class="block tablet:hidden"
      data-testid="MainNavMobile"
    >
      <button
        class="relative h-10 w-10 focus:outline-none"
        type="button"
      >
        <span
          class="sr-only"
        >
          Open main menu
        </span>
        <div
          class="absolute left-1/2 top-1/2 block w-5 -translate-x-1/2 -translate-y-1/2 transform"
        >
          <span
            aria-hidden="true"
            class="absolute block h-0.5 w-5 transform bg-white transition ease-in-out -translate-y-1.5"
          />
          <span
            aria-hidden="true"
            class="absolute block h-0.5 w-5 transform bg-white transition ease-in-out"
          />
          <span
            aria-hidden="true"
            class="absolute block h-0.5 w-5 transform bg-white transition ease-in-out translate-y-1.5"
          />
        </div>
      </button>
      <div
        class="absolute inset-x-0 -z-10 shadow-lg transition -translate-y-full"
      >
        <ul
          class="flex-col items-center space-y-4 pt-4 pb-8 hidden"
        >
          <li>
            <a
              class="text-lg"
              href="/docs"
            >
              Docs
            </a>
          </li>
          <li>
            <a
              class="text-lg"
              href="/enterprise"
            >
              Enterprise
            </a>
          </li>
          <li>
            <a
              class="text-lg"
              href="/sponsors"
            >
              Sponsors
            </a>
          </li>
        </ul>
      </div>
    </div>
    <ul
      class="hidden space-x-8 tablet:flex"
      data-testid="MainNavDesktop"
    >
      <li>
        <a
          class="text-lg"
          href="/docs"
        >
          Docs
        </a>
      </li>
      <li>
        <a
          class="text-lg"
          href="/enterprise"
        >
          Enterprise
        </a>
      </li>
      <li>
        <a
          class="text-lg"
          href="/sponsors"
        >
          Sponsors
        </a>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;
